--- a/pages/productos.html
+++ b/pages/productos.html
@@ -63,6 +63,20 @@
         <div class="itemCarrusel" id="itemCarrusel-2">
           <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
            <img src="../img/hamburguesas_morada.png" alt="morada">
+           <div class="detalle">
+            <h1>King of Magic</h1>
+            <ul>
+              <li>
+                <i>- Colchon de lechuga</i>
+                <i>- Coronas de cebolla morada</i>
+                <i>- Ruedas de tomate</i>
+                <i>- Pepinillos</i>
+                <i>- Mozzarella</i>
+                <i>- Hamburgesa de carne de 84 grs</i>
+                <i>- Colchon de lechuga</i>
+              </li>
+            </ul>
+          </div>
           </div>
           <div class="flechasCarrusel">
             <a href="#itemCarrusel-1">
@@ -76,6 +90,19 @@
         <div class="itemCarrusel" id="itemCarrusel-3">
           <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
             <img src="../img/hamburguesas_pollo.png" alt="pollo">
+            <div class="detalle">
+              <h1>Kiss</h1>
+              <ul>
+                <li>
+                  <i>- Queso fundido</i>
+                  <i>- Colchon de lechuga</i>
+                  <i>- Ruedas de tomate</i>
+                  <i>- Fetas de jamon</i>
+                  <i>- Pollo krispy</i>
+                  <i>- Chedar</i>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="flechasCarrusel">
             <a href="#itemCarrusel-2">
@@ -89,6 +116,19 @@
         <div class="itemCarrusel" id="itemCarrusel-4">
           <div class="tarjetaCarrusel" id="tarjetaCarrusel-4">
             <img src="../img/hamburguesas_special.png" alt="special">
+            <div class="detalle">
+              <h1>Marley</h1>
+              <ul>
+                <li>
+                  <i>- Papas baston</i>
+                  <i>- Batatas baston</i>
+                  <i>- Chedar</i>
+                  <i>- Hamburgesa de carne de 84 grs</i>
+                  <i>- Ruedas de tomate</i>
+                  <i>- Colchon de lechuga</i>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="flechasCarrusel">
             <a href="#itemCarrusel-3">
