--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -36,7 +36,7 @@
                 <img src="../img/beatles.jpg" class="beatles" alt="beatles">
                 <p class="descripcion">Rockburger es una hamburguesería que nació en La ciudad de La Plata a principios de los'80. Fue fundada por una familia de músicos provenientes de Europa, con inluencias del rock de la época.
                 Comenzó como una despensa en la que se podía comprar desde galletas hasta medicamentos. Con el paso de los años, el negocio fue mutando hasta ser un restaurante, dado a la gran cantidad de visitantes extranjeros que recibía al año.
-                Y ya en el año 1997, la familia decide redireccionar su rumbo, pasando a ser una casa de comidas rápidas (Fast Rock). A los dos años,se pierde todo a causa de un incendio. Y gracias al aporte y a la ayuda de los vecinos, en el año 2002, vuelve a abrir sus puertas como Rockburger. Hoy es una de las hamburgueserías más reconocidas a nivel nacional.
+                Y ya en el año 1997, la familia decide redireccionar su rumbo, pasando a ser a una casa de comidas rápidas (Fast Rock). A los dos años,se pierde todo a causa de un incendio. Y gracias al aporte y a la ayuda de los vecinos, en el año 2002, vuelve a abrir sus puertas como Rockburger. Hoy es una de las hamburgueserías más reconocidas a nivel nacional.
 
                 </p>
             </div>
